# hockney-joiner

./: .gitignore  BUILD.md  CONTROLS.md  ETHICS.md  LICENSE  REFERENCE_PLACEMENT.md  pyproject.toml  requirements.txt
hockney/: __main__.py  main.py
hockney/core/: export.py  image_store.py  models.py  placement.py  placement_akaze.py  placement_brisk.py  placement_loftr.py  placement_log.py  placement_orb.py  placement_sift.py  project.py  vision_chat.py
hockney/effects/: filters.py  surface.py
hockney/installer/: model_fetch.py
hockney/ui/: chat_panel.py  export_dialog.py  main_window.py  new_project_dialog.py  reference_panel.py  sidebar.py  tray_view.py
